--- a/views/all_users.hbs
+++ b/views/all_users.hbs
@@ -4,6 +4,7 @@
         <td>{{name}}</td>
         <td>{{age}}</td>
         <td>{{salary}}</td>
+        <td><a href="/user/show/{{name}}">show</a></td>
     </tr>
     {{/each}}
 </table>
